--- a/xl/index.html
+++ b/xl/index.html
@@ -61,7 +61,7 @@
   </div> 
   <script>
   <!--
-var sassy = "YouTube XL User";
+var sassy = "CollabTube XL User";
 
 
 
@@ -308,7 +308,7 @@ fetch(vidtapebrowse)
 
   var textNoVideosFound = "No Videos Found";
 
-  var github = "HOW?!?!?"
+  var github = "No Videos Found"
 
 
   var viewSubmenuBrowse = [
