attempt on adding an html based player #1

--- a/xlplayer/index.html
+++ b/xlplayer/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video src="" class="full" autoplay></video>
+    <video src="" class="full"></video>
     <div class="controls" style="opacity: 1;">
         <div class="progressbar">
             <span class="loaded"></span>
