--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <hr>
 <a href="/albuquerque.mp3">Albuquerque MP3 File</a>
 <hr>
+<a href="/deck/deck.user.js">Custom UserScript</a>
+<hr>
 <small>More Coming Soon.</small>
 </center>
 </html>
