--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <hr>
 <a href="/albuquerque.mp3">Albuquerque MP3 File</a>
 <hr>
-<a href="/deck/deck.user.js">Custom UserScript</a>
+<a href="/deck/deck.user.js">Deck</a>
+<hr>
+<a href="/userscriptmods/CarTomb.user.js">Deck</a>
 <hr>
 <small>More Coming Soon.</small>
 </center>
