--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <hr>
 <a href="/deck/deck.user.js">Deck</a>
 <hr>
-<a href="/userscriptmods/CarTomb.user.js">Deck</a>
+<a href="/userscriptmods/CarTomb.user.js">CarTomb</a>
 <hr>
 <small>More Coming Soon.</small>
 </center>
