--- a/xl/index.html
+++ b/xl/index.html
@@ -1046,7 +1046,7 @@ fetch(vidtapebrowse)
               label: "Settings"
             },
             cont_playback: generateCheckBoxItem(
-              "Play next video when current video ends.",
+              "Pacifier Mode",
               'config.autoPlayNextOff',
               false
             ),
