erm what the sigma

--- a/xbox/index.html
+++ b/xbox/index.html
@@ -188,7 +188,7 @@ r 93-21-8A-5E-5D-3B-08-4D-98-12-00-A3-25-F1-31-0A
           <param name="splashscreensource" value="/Shell/Hero/SplashScreen.xaml"/>
           <param name="onSourceDownloadProgressChanged" value="onSourceDownloadProgressChanged"/>
           <!--CONFIG PATH-->
-          <param name="initParams" value="basePath=,modulePath=/Shell/Hero/xbox_carousel.xap,configXmlPath=http://www.xbox.com/en-US/HeroConfig,errorImgSrc=/images/xbox_carousel_default.jpg"/>
+          <param name="initParams" value="basePath=,modulePath=/Shell/Hero/xbox_carousel.xap,configXmlPath=http://cmd-hue.github.io/xbox/xbox_carousel_default.jpg"/>
                 
          <div id="landingCarouselWrap">
             <div id="noJsMessaging"></div><!-- /noJsMessaging -->
@@ -207,11 +207,11 @@ r 93-21-8A-5E-5D-3B-08-4D-98-12-00-A3-25-F1-31-0A
 
     <script language="javascript">
     //<!--
-    var heroConfigUrl = "HeroConfig.xml";
+    var heroConfigUrl = "hero.xml";
     //-->
     </script>
 
-    <script src="https://web.archive.org/web/20110207185216js_/http://www.xbox.com/Shell/Hero/Script/xbox.carousel.js" type="text/javascript"></script>
+    <script src="xbox.carousel.js" type="text/javascript"></script>
     <script src="https://web.archive.org/web/20110207185216js_/http://www.xbox.com/Shell/Hero/Script/tracking_omniture.js" type="text/javascript"></script>
 
 
