--- a/xbox/index.html
+++ b/xbox/index.html
@@ -13,9 +13,9 @@ v 11.1.0043.0
 s 00-85-00-59-38-70-70-3F-92-F6-98-7F-1B-5A-AC-9C
 r 93-21-8A-5E-5D-3B-08-4D-98-12-00-A3-25-F1-31-0A
 -->
-    <script type="text/javascript" src="https://web.archive.org/web/20110207185216js_/http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="https://cdnsrc.asp.net/ajax/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="https://web.archive.org/web/20110207185216js_/http://www.xbox.com/Shell/js/shiny.js"></script>
-    <script type="text/javascript" src="https://web.archive.org/web/20110207185216js_/http://www.xbox.com/Shell/js/general.js"></script>
+    <script type="text/javascript" src="general.js"></script>
     <script type="text/javascript">try{var utcOffsetMinutes = new Date().getTimezoneOffset() * -1;setCookie("UtcOffsetMinutes", utcOffsetMinutes, 30);} catch (e){}</script>
     <link rel="Stylesheet" type="text/css" href="https://web.archive.org/web/20110207185216cs_/http://www.xbox.com/Shell/css/GridLayout.css"/><link rel="Stylesheet" type="text/css" href="https://web.archive.org/web/20110207185216cs_/http://www.xbox.com/Shell/css/XboxV3.css"/><link rel="Stylesheet" type="text/css" href="https://web.archive.org/web/20110207185216cs_/http://www.xbox.com/Shell/css/ShellStyles.css"/><link rel="Stylesheet" type="text/css" href="https://web.archive.org/web/20110207185216cs_/http://www.xbox.com/Shell/css/jquery-ui-theme.css"/><link rel="shortcut icon" href="https://web.archive.org/web/20110207185216im_/http://www.xbox.com/Shell/images/favicon.ico"/>
     
@@ -86,7 +86,7 @@ r 93-21-8A-5E-5D-3B-08-4D-98-12-00-A3-25-F1-31-0A
     </div>
     
     <div id="ShellBreadcrumbs">
-        <a href="http://www.xbox.com:80/">Home</a>
+        <a href="/">Home</a>
     </div>
     <script language="javascript" type="text/javascript">
     //<![CDATA[        
