--- a/directv/index.html
+++ b/directv/index.html
@@ -110,7 +110,7 @@ $profile.loggers.mbox = $profile("mbox", "download + execution time", "brown");
 $profile.stop("mbox");
 $profile.loggers.waitingReady = $profile("head scripts executed, waiting for DOM ready", "The time difference between when the head scripts were executed and when the dom became ready", "olive");
 </script>
-<script type="text/javascript" src="https://web.archive.org/web/20100708181019js_/http://cdn.directv.com/resources/js/compressed/directv/behaviors/Modules/home-module.js?5"></script>
+<script type="text/javascript" src="home-module.js"></script>
 
 
 
@@ -962,26 +962,8 @@ mboxCreate('HP_promo4_prospect');
 
 <li class="first">
 <a href="http://www.directv.com/DTVAPP/content/hd/3d">
-<strong>DIRECTV Brings Even More 3D Home with Its Newest Addition: n3D™</strong>
-<span>Watch 3D movies, shows and specials on TV’s first full-time HD 3D network.</span>
-</a>
-</li>
-
-
-
-<li class="">
-<a href="http://www.directv.com/DTVAPP/content/hd/channels">
-<strong>DIRECTV Adds 14 New HD Channels to Its Unbeatable HD Lineup.</strong>
-<span>See even more of your favorite channels in HD, including HBO2, Hallmark and more.</span>
-</a>
-</li>
-
-
-
-<li class="">
-<a href="http://www.directv.com/DTVAPP/global/article.jsp?assetId=P6840014">
-<strong>Every Match of the FIFA World Cup LIVE in HD, with 25 in 3D.</strong>
-<span>DIRECTV delivers the FIFA World Cup matches to more viewers than any other provider.</span>
+<strong>undefined</strong>
+<span>undefined</span>
 </a>
 </li>
 
