--- a/directv/index.html
+++ b/directv/index.html
@@ -470,15 +470,15 @@ Travelers</a></li>
 <div id="dtv_topnav_search_cart">
 <ul>
 <li id="dtv_topnav_search">
-<form name="searchForm" id="searchForm" action="//web.archive.org/web/20100708181019/http://www.directv.com/DTVAPP/search/siteSearchResults.jsp" method="get" onsubmit="if (document.getElementById('dtv_topnav_search_input').value == 'Search') {document.getElementById('dtv_topnav_search_input').value = '';}">
+<form name="searchForm" id="searchForm" action="/directvsearch.html" method="get" onsubmit="if (document.getElementById('dtv_topnav_search_input').value == 'Search') {document.getElementById('dtv_topnav_search_input').value = '';}">
 <input type="text" name="searchTerm" id="dtv_topnav_search_input" class="search" size="18" maxlength="100" tabindex="1" value="Search" onfocus="if(this.value=='Search'){this.value=''; this.style.color='#ffffff';}" onblur="if(this.value==''){this.value='Search'; this.style.color='#bbcedc';}"/>
 <input name="homeSearch" id="dtv_topnav_search_submit" src="https://web.archive.org/web/20100708181019im_/http://cdn.directv.com/images/spacer.gif" type="image" alt="Search" class="formTech"/>
 </form>
 <div class="autocompleteSearchBox" id="seach_autocomplete_items" style="display:none;"></div>
 <img id="search_wait_proc" style="display:none" width="18" height="18" src="https://web.archive.org/web/20100708181019im_/http://cdn.directv.com/images/global/topnav/SEARCH_LOAD.gif" alt="Loading"/>
-<span id="typeAheadCdnUrl" style="display:none">http://cdn.directv.com</span>
+<textarea id="typeAheadCdnUrl" style="display:none">http://cdn.directv.com</textarea>
 </li>
-<li id="customer_ordernow"><a href="http://www.directv.com/DTVAPP/new_customer/shopping_cart.jsp" rel="/DTVAPP/new_customer/lightbox/lightboxGettingStarted.jsp" class="js-ajax-opener"><span>Order Now</span></a></li>
+<li id="customer_ordernow"><a class="js-ajax-opener"><span>Order Now</span></a></li>
 </ul>
 </div>
 
