--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <hr>
 <a href="/firefoxstartgoogle/">Google Firefox Start Page Revival (2009)</a>
 <hr>
+<a href="/lab/">Banjo's Lab</a>
+<hr>
 
 <small>More Coming Soon.</small>
 </center>
