--- a/xl/tv/yt-tv-2009.html
+++ b/xl/tv/yt-tv-2009.html
@@ -20,7 +20,7 @@ if (outage && outage.active === true) {
 </script>
 
 <style>
-    .yttv-view-player-video {
+    .yttv-view-player-video .active {
         display: none !important;
         }
 </style>
