--- a/xl/tv/index.html
+++ b/xl/tv/index.html
@@ -113,7 +113,7 @@ ytd-consent-bump-v2-lightbox { display: none !important; }
 
     <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20090303214154cs_/http://s.ytimg.com/yt/css/tv/yttv/yttv-base-vfl80517.css">
     <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20090303214154cs_/http://s.ytimg.com/yt/css/tv/yttv/yttv-button-vfl80517.css">
-    <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20090303214154cs_/http://s.ytimg.com/yt/css/tv/yttv/yttv-default-vfl80517.css">
+    <link rel="stylesheet" type="text/css" href="tv.css">
     <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20090303214154cs_/http://s.ytimg.com/yt/css/tv/yttv/yttv-image-vfl80517.css">
     <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20090303214154cs_/http://s.ytimg.com/yt/css/tv/yttv/yttv-site-vfl80517.css">
 
