--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -1,28 +1,7 @@
 
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org" xmlns:yt="http://youtube.com">
-  <head><script type="text/javascript" src="https://web-static.archive.org/_static/js/bundle-playback.js?v=Hk4-lkW3" charset="utf-8"></script>
-<script type="text/javascript">
-    __wm.init("https://web.archive.org/web");
-  __wm.wombat("https://www.youtube.com/tv","20130311132549","https://web.archive.org/","web","https://web-static.archive.org/_static/",
-	      "1363008349");
-</script>
-<link rel="stylesheet" type="text/css" href="https://web-static.archive.org/_static/css/banner-styles.css?v=1utQkbB3" />
-<link rel="stylesheet" type="text/css" href="https://web-static.archive.org/_static/css/iconochive.css?v=3PDvdIFv" />
-<link rel="stylesheet" type="text/css" href="https://web-static.archive.org/_static/css/video-js.css?v=cx7Dxc0l" />
-<!-- Start Wayback Rewrite JS Include -->
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/jwplayer/jwplayer.js?v=hiYhl5rb" charset="utf-8"></script>
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/videojs/videojs.min.js?v=PILOY3BM" charset="utf-8"></script>
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/bundle-video.js?v=92PJYEJZ" charset="utf-8"></script>
-<script type="text/javascript">
-_wmVideos_.init({ prefix:"/web" });
-</script>
-<style id="wm-inject-css">
-tp-yt-iron-overlay-backdrop { display: none !important; }
-ytd-consent-bump-v2-lightbox { display: none !important; }
-</style>
-<!-- End Wayback Rewrite JS Include -->
-
+  <head>
     <script>(function(){(function(){function d(a){this.t={};this.tick=function(a,c,b){b=void 0!=b?b:(new Date).getTime();this.t[a]=[b,c]};this.tick("start",null,a)}var a=new d;window.jstiming={Timer:d,load:a};if(window.performance&&window.performance.timing){var a=window.performance.timing,c=window.jstiming.load,b=a.navigationStart,a=a.responseStart;0<b&&a>=b&&(c.tick("_wtsrt",void 0,b),c.tick("wtsrt_","_wtsrt",a),c.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Math.floor(window.chrome.csi().pageT),c&&0<b&&(c.tick("_tbnd",void 0,window.chrome.csi().startE),c.tick("tbnd_","_tbnd",b))),null==a&&window.gtbExternal&&(a=window.gtbExternal.pageT()),null==a&&window.external&&(a=window.external.pageT,c&&0<b&&(c.tick("_tbnd",void 0,window.external.startE),c.tick("tbnd_","_tbnd",b))),a&&(window.jstiming.pt=a)}catch(e){}})();})();</script>
     <title>YouTube TV</title>
     <link rel="icon" href="https://web.archive.org/web/20130311132549im_/https://s.ytimg.com/yts/favicon-vfldLzJxy.ico" type="image/x-icon">
@@ -221,7 +200,7 @@ ytd-consent-bump-v2-lightbox { display: none !important; }
               "interaction_logging_sw": 1,
               "isDebug": true,
               "exceptions_sw": 100,
-              "platform": PS3
+              "platform": "PS3"
           }
       };
       window['loader'] = "live";
