--- a/lab/index.html
+++ b/lab/index.html
@@ -1,1 +1,12 @@
-coming soon
+<!DOCTYPE html>
+<html>
+<body><title>CMD HUE</title></body>
+<center>
+        <h1>Banjo's Lab</h1>
+    <hr>
+<a href="vidcast.user.js">Banjo's VidTape & BetaCast Mods</a>
+<hr>
+
+<small>More Coming Soon.</small>
+</center>
+</html>
