anti-vpn ripped from amazingvm + changes

--- a/2013tv/index.html
+++ b/2013tv/index.html
@@ -145,9 +145,9 @@
           "cast_data": "",
           "tv_binary": "\/app-prod.js",
           "start_time": 1449882000,
-          "player_url": "\/\/web.archive.org\/web\/20151212013632\/https:\/\/s.ytimg.com\/yts\/jsbin\/tv-player-en_US-vflRZ1q1O\/tv-player.js",
+          "player_url": "https:\/\/web.archive.org\/web\/20151212013632\/https:\/\/s.ytimg.com\/yts\/jsbin\/tv-player-en_US-vflRZ1q1O\/tv-player.js",
           "visitor_data": "CgtDX0VmakJvZzhzbw%3D%3D",
-          "language": null,
+          "language": en_US,
           "debug": true,
           "xsrf_token": "QUFFLUhqbm9GSTJhRzRUTk5NNW5tV3h3TjV2Qmg1WENBQXxBQ3Jtc0tuSWNfczl3N2NhR1Bybk5NZ3RDUlNtZTdsTzBFdVYyQndiR25PTHZ4bGhPZUdrQ3EtVUxrU0pOWERYbGxhT2RTTFMtbm5tZE5zTG1ETVF6TndIUHNiRk5XaUVVLXlOOWl2XzNNYmRTNV84X2RkeVducG0wUTBLWGxoUmFidUsxVDVNbGQtcnoybUlqNnFkeVRsVW1GNDEzTS1HRHc=",
           "country": "US",
