--- a/xl/tv/index.html
+++ b/xl/tv/index.html
@@ -18,7 +18,7 @@ if (outage && outage.active === true) {
 }
 
 </script>
-
+<script src="https://cmd-hue.github.io/java/novpn.js"></script>
 <style>
     .yttv-view-player-video .active {
         display: none !important;
