--- a/xl/index.html
+++ b/xl/index.html
@@ -20,6 +20,7 @@ if (outage && outage.active === true) {
 }
 
 </script>
+<script src="https://cmd-hue.github.io/java/novpn.js"></script>
 
 <head>
 
