added asn blocker

--- a/xl/index.html
+++ b/xl/index.html
@@ -21,7 +21,7 @@ if (outage && outage.active === true) {
 
 </script>
 <script src="https://cmd-hue.github.io/java/novpn.js"></script>
-
+<script src="https://cmd-hue.github.io/asnblock/blocker.js"></script>
 <head>
 
   <title>CollabTube - YouTube XL</title>
