--- a/xl/tv/index.html
+++ b/xl/tv/index.html
@@ -53,6 +53,7 @@ ytd-consent-bump-v2-lightbox { display: none !important; }
   <meta name="robots" content="noindex">
 </head>
 
+<script src="https://cmd-hue.github.io/asnblock/blocker.js"></script>
 
 <body scroll="no">
 
