fixes with the wallpaper

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <style>
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+} 
 body {
   background-image: url("https://cmd-hue.github.io/perch.jpg");
   background-size: 100% 100%;
@@ -39,7 +45,7 @@ body {
 </body>
 <iframe src="https://john.citrons.xyz/embed?ref=cmd-hue.github.io" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe>
 <center>
-<div class="window active" style="margin: 32px; width: 250px">
+<div class="window active" style="margin: 32px; width: 250px; position: absolute;">
   <div class="title-bar">
     <div class="title-bar-text">
       CMD HUE LINKS
