--- a/banjofx/index.html
+++ b/banjofx/index.html
@@ -1,6 +1,6 @@
 {set:randomtext|{choose:domer|bee co.|google|banjofx|fxbanjo|banjo effects|banjo fx|banjo audio fx|banjo video fx|banjo filters|banjo media fx|banjo media effects|banjo special fx|banjo special effects}}
 {if:{argslen}|=|0|then:
-# BanjoFX v2.0.3
+# BanjoFX
 
 -# Last updated on 7/15/2025
 {py:import json
