--- a/banjofx/index.html
+++ b/banjofx/index.html
@@ -1,4 +1,4 @@
-{set:randomtext|{choose:domer|bee co.|google|banjofx|fxbanjo|banjo effects|banjo fx|banjo audio fx|banjo video fx|banjo filters|banjo media fx|banjo media effects|banjo special fx|banjo special effects}}
+{set:randomtext|{choose:domer|bee co.|google|banjofx|fxbanjo|banjo effects|banjo fx|banjo audio fx|banjo video fx|banjo filters|banjo media fx|banjo media effects|banjo special fx|banjo special effects|it's my world and we're all living in it|ALBUQUERQUE!|banjoquerque|banjo land|fx land|effect land|banjo kingdom|fx kingdom|effect kingdom|the land of banjo fx|the kingdom of banjo fx|milo murphy's law}}
 {if:{argslen}|=|0|then:
 # BanjoFX
 
@@ -25,6 +25,7 @@ console.log(effects.includes(args))}} {set:offset|1} {if:{arg:0}|=|normal|then:{
 huecurvergba # red 0 0.6666666666666666666666666666666666666666666666666666666666666667 
 huecurvergba # green 0.6666666666666666666666666666666666666666666666666666666666666667 0.6666666666666666666666666666666666666666666666666666666666666667 
 huecurvergba # blue 0 0.6666666666666666666666666666666666666666666666666666666666666667
+contrast # 4
 load https://files.catbox.moe/uuq1nk.png sprout
 fit sprout #w #h
 contain sprout sproutw/2 sprouth/2
